manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todo-app-ingress
  labels:
    app.kubernetes.io/name: todo-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: kuilacattlefeeds.shop
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: todo-app-service
            port: 
              number: 80
